# neu_geometric

./: README.md  setup.py
csrc/: CMakeLists.txt  new_utils.h  scatter.cpp  scatter_cuda.cu
my_scatter/: __init__.py  scatter.py  utils.py
neu_geometric/: __init__.py
neu_geometric/data/: __init__.py  data.py  in_memory_dataset.py
neu_geometric/dataset_io/: __init__.py  planetoid.py
neu_geometric/dataset_script/: __init__.py  planetoid.py
neu_geometric/nn/conv/: __init__.py  gcn_conv.py  message_passing.py
neu_geometric/transforms/: __init__.py
neu_geometric/utils/: __init__.py  isolated.py  loop.py  scatter.py
test_examples/: gcn.py  test_python.py  test_scatter.py
